confik-macros/tests/trybuild/fail-field-from-unknown-type.stderr
error[E0412]: cannot find type `A` in this scope
 --> tests/trybuild/fail-field-from-unknown-type.rs:6:21
  |
6 |     #[confik(from = "A")]
  |                     ^^^ not found in this scope
  |
help: you might be missing a type parameter
  |
5 | struct Config<A> {
  |              +++

error[E0412]: cannot find type `A` in this scope
 --> tests/trybuild/fail-field-from-unknown-type.rs:6:21
  |
6 |     #[confik(from = "A")]
  |                     ^^^ not found in this scope
